# climon

./: .git-cmsg  .gitattributes  .gitignore  CHANGELOG.json  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EULA.md  HANDOFF.md  LICENSE  README.md  SECURITY-REVIEW-HANDOFF.md  SECURITY.md  bunfig.toml  index.html  install.ps1  install.sh  package.json  privacystatement.html  termsofservice.html  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.husky/: post-merge
.well-known/: microsoft-identity-association.json
copilot-plugin/: README.md  plugin.json
docs/: architecture.md  cheat-sheet.md  cutting-a-release.md  deployment.md  design-attach.md  design-pwa-devcode-auth.md  features.md  logging.md  privacy.md  pwa-tunnel-auth-RESUME.md  pwa-tunnel-auth-findings.md  security.md  setup.md  troubleshooting.md  usage.md
harness/: README.md  playwright.config.ts  tsconfig.json
rust/: Cargo.toml  THIRD-PARTY-LICENSES.md  about.hbs  about.toml  deny.toml
rust/.fv-scratch/: big.txt  clean.md  long.txt  xss.md
rust/climon-cli/: Cargo.toml  build.rs
rust/climon-cli/src/: args.rs  cleanup_cmd.rs  client.rs  config_cmd.rs  detach_key.rs  detect_shell.rs  installer.rs  launcher.rs  lib.rs  link_cmd.rs  main.rs  pathenv.rs  process_kill.rs  query_title.rs  remotes_cmd.rs  run.rs  self_spawn.rs  server_exec.rs  spawn.rs  spawn_command.rs  terminal_launch.rs  title.rs  uplink_spawn.rs  version.rs
rust/climon-cli/tests/: cli_fixtures.rs  raw_mode_no_echo.rs  setup_cmd.rs
rust/climon-config/: Cargo.toml
rust/climon-config/src/: config.rs  config_settings.rs  docs.rs  features.rs  jsonc.rs  lib.rs
rust/climon-config/tests/: fixtures.rs
rust/climon-dll/: Cargo.toml
rust/climon-dll/src/: lib.rs
rust/climon-install/: Cargo.toml
rust/climon-install/src/: changelog.rs  eula.rs  files.rs  files_unix.rs  install_id.rs  installer.rs  lib.rs  linux.rs  macos.rs  manifest.rs  onboarding.rs  orchestrate.rs  path.rs  processes.rs  setup_cmd.rs  testutil.rs  update.rs  version_bump.rs  windows.rs
rust/climon-install/tests/: config_settings_installer.rs  install_fixtures.rs
rust/climon-logging/: Cargo.toml
rust/climon-logging/src/: cli_io.rs  env.rs  level.rs  lib.rs  logger.rs  pretty.rs  redact.rs  sinks.rs
rust/climon-logging/tests/: redact_fixture.rs
rust/climon-proto/: Cargo.toml
rust/climon-proto/src/: auth.rs  frame.rs  lib.rs  meta.rs  priority.rs  session_meta.rs
rust/climon-proto/tests/: fixtures.rs
rust/climon-pty/: Cargo.toml
rust/climon-pty/src/: command.rs  descendants.rs  error.rs  headless_conpty.rs  lib.rs  pty.rs  scrollback.rs  term.rs
rust/climon-pty/tests/: pty_integration.rs
rust/climon-remote/: Cargo.toml
rust/climon-remote/src/: client_id.rs  demotion.rs  discovery.rs  file_read.rs  ingest.rs  ingest_bind_host.rs  ingest_port.rs  ingest_state.rs  ingest_status.rs  ingest_tunnel_id.rs  keepalive.rs  lib.rs  link.rs  mux.rs  peer.rs  process.rs  remote_host.rs  shutdown_request.rs  shutdown_watch.rs  singleton.rs  spawn_auth.rs  target_set.rs  teardown.rs  time.rs  tunnel.rs  uplink.rs  uplink_status.rs
rust/climon-remote/src/devtunnel/: classify.rs  gateway.rs  mod.rs  retry.rs  types.rs
rust/climon-remote/tests/: fixtures.rs  ingest_control_socket.rs  spawn_control_wire.rs
rust/climon-rs/: Cargo.toml  README.md
rust/climon-rs/src/: frame.rs  host.rs  json.rs  main.rs  meta.rs  scrollback.rs  term.rs  viewer.rs
rust/climon-rs/tests/: climon_register.rs  shadow.rs
rust/climon-session/: Cargo.toml
rust/climon-session/src/: attention.rs  auth.rs  control.rs  error.rs  fingerprint.rs  host.rs  idle.rs  lib.rs  replay.rs  resize.rs  snippet.rs  socket.rs  title_capture.rs
rust/climon-session/src/adapters/: ipc.rs  local_terminal.rs  metadata.rs  mod.rs  pty.rs  signals.rs  timers.rs
rust/climon-session/src/adapters/ipc/: test_support.rs
rust/climon-session/src/domain/: attention.rs  clients.rs  control.rs  lifecycle.rs  local_view.rs  mod.rs  terminal.rs
rust/climon-session/src/engine/: coordinator.rs  effect.rs  event.rs  mod.rs  state.rs  stress.rs  supervisor.rs
rust/climon-session/src/host/: legacy.rs  mod.rs
rust/climon-session/src/test_support/: coordinator.rs  harness.rs  mod.rs  trace.rs
rust/climon-session/tests/: actor_stress.rs  actor_windows_eof.rs  auth_gate.rs  engine_parity.rs  fixtures.rs  session_integration.rs
rust/climon-session/tests/common/: mod.rs
rust/climon-setup/: Cargo.toml  build.rs
rust/climon-setup/src/: main.rs
rust/climon-store/: Cargo.toml
rust/climon-store/src/: atomic.rs  error.rs  ipc_auth.rs  ipc_lock.rs  lib.rs  lock.rs  meta.rs  patch.rs  paths.rs  server_state.rs  session_id.rs  test_support.rs
rust/climon-store/tests/: concurrency.rs  store_fixtures.rs
rust/climon-stub/: Cargo.toml
rust/climon-stub/src/: lib.rs  pointer.rs
rust/climon-update/: Cargo.toml  build.rs
rust/climon-update/examples/: gen_envelope_fixture.rs
rust/climon-update/src/: artifact.rs  bootstrap.rs  check.rs  clock.rs  crypto_envelope.rs  distribution.rs  download.rs  install_manifest.rs  launch_hooks.rs  lib.rs  manifest.rs  obfuscate.rs  pointer.rs  pubkey.rs  reaper.rs  state.rs  swap.rs  update_cli.rs  update_cmd.rs  verify.rs  version.rs  win_inherit_guard.rs
rust/climon-update/tests/: architecture.rs  fixtures.rs
scripts/: bridge-release.ts  build-rust.ts  build-web.ts  check-peer-deps.ts  compile.ts  dev.ts  download-stats.sh  embed-assets.ts  encrypt-release.ts  extract-messages.ts  gen-config-fixtures.ts  gen-remote-fixtures.ts  gen-update-fixtures.ts  gen-update-keys.ts  generate-config-docs.ts  log-level.ts  logs.ts  release.ts  rust-toolchain.ts  server-build.ts  server-loop.ts  sign-release.ts  upgrade-test-harness.ts  verify-signing-key.ts
src/: attention.ts  config-jsonc.ts  config-merge.ts  config-settings.ts  config.ts  dashboard-preference-keys.ts  dashboard-themes.ts  detect-shell.ts  features.ts  hotkeys.ts  index.ts  install-id.ts  installer-bundle-entry.ts  launcher.ts  notification-content.ts  port-choice.ts  priority.ts  (+16 more)
(+610 files in other folders)
