[workspace]
resolver = "2"
members = ["climon-proto", "climon-logging", "climon-config", "climon-store", "climon-pty", "climon-session", "climon-remote", "climon-cli", "climon-install", "climon-update", "climon-stub", "climon-dll", "climon-setup"]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
climon-proto = { path = "climon-proto" }
human_id = "0.1"
getrandom = "0.4"
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"
libc = "0.2"
portable-pty = "0.9"
signal-hook = "0.4"
vt100 = "0.16"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }

[profile.release]
opt-level = 2
