[package]
name = "climon-config"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "climon config schema, JSONC comment-preserving writer, cascade resolution, and docs generator (Rust port of the TS client)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
climon-proto = { path = "../climon-proto", version = "0.1.0" }
