[package]
name = "climon-proto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "climon wire protocol, session metadata, and priority types (Rust port of the TS client)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
getrandom = { workspace = true }
