[package]
name = "climon-pty"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "climon PTY/terminal primitives: cross-platform PTY spawn/resize (portable-pty), raw-mode termios, terminal-size queries, and a bounded scrollback ring buffer (Rust port of src/pty.ts)"

[dependencies]
portable-pty = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[target.'cfg(unix)'.dev-dependencies]
libc = { workspace = true }
