[package]
name = "climon-rs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Rust climon client — terminal shadowing PoC"

[[bin]]
name = "climon-rs"
path = "src/main.rs"

[dependencies]
climon-proto = { path = "../climon-proto", version = "0.1.0" }
portable-pty = "0.8"
libc = "0.2"
signal-hook = "0.3"
