[package]
name = "climon-setup"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Dedicated climon installer -> install[.exe] (replaces the install->climon rename + climon-alpha sentinel)"
build = "build.rs"

[[bin]]
name = "install"
path = "src/main.rs"

[dependencies]
climon-install = { path = "../climon-install", version = "0.1.0" }
