[package]
name = "climon-stub"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Zero-dependency Windows stub launchers: client DLL loader (climon.exe) and server exe launcher (climon-server.exe)"

[lib]
name = "climon_stub"
path = "src/lib.rs"

[[bin]]
name = "climon-stub"
path = "src/bin/client.rs"

[[bin]]
name = "climon-server-stub"
path = "src/bin/server.rs"

[dev-dependencies]
tempfile = "3"
