[package]
name = "climon-update"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "climon self-update: Ed25519 verify, manifest, atomic no-kill binary swap (Rust port of the TS client updater)"
build = "build.rs"

[features]
# Dev/test only: allows `climon update` to read its manifest URL from the
# CLIMON_TEST_MANIFEST_URL env var instead of the hardcoded production URL.
# Enabled by scripts/compile.ts only for explicit local upgrade-harness builds.
# Release builds physically lack the override code.
test-update-endpoint = []

[lib]
name = "climon_update"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
climon-config = { path = "../climon-config", version = "0.1.0" }
climon-install = { path = "../climon-install", version = "0.1.0" }
ed25519-dalek = "3"
base64 = "0.22"
ureq = { version = "2", default-features = false, features = ["tls", "gzip"] }
zip = { version = "8", default-features = false, features = ["deflate"] }
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
